--- a/Smiling_Tigers/Smiling_Tigers_-_Home.html
+++ b/Smiling_Tigers/Smiling_Tigers_-_Home.html
@@ -285,8 +285,20 @@ new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
             
 
 
-            <div class="tinyText" style="height: 28px; left: 505px; position: absolute; top: 292px; width: 96px; z-index: 1; ">
-              <img usemap="#map1" id="shapeimage_15" src="Smiling_Tigers_-_Home_files/shapeimage_15.png" style="border: none; height: 35px; left: -3px; position: absolute; top: -3px; width: 102px; z-index: 1; " alt="Book Now!" title="" /><map name="map1" id="map1"><area href="mailto:componentsdr@gmail.com?subject=Website%20Booking" title="mailto:componentsdr@gmail.com?subject=Website Booking" alt="mailto:componentsdr@gmail.com?subject=Website%20Booking" coords="3, 3, 99, 31" /></map>
+            <div id="id10" style="height: 28px; left: 532px; position: absolute; top: 292px; width: 96px; z-index: 1; " class="style_SkipStroke_3 shape-with-text">
+              <div class="text-content graphic_textbox_layout_style_default_External_96_28" style="padding: 0px; ">
+                <div class="graphic_textbox_layout_style_default">
+                  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style">Book Now!</p>
+                </div>
+              </div>
+            </div>
+            
+
+
+            <div style="height: 7px; width: 27px;  height: 1px; left: 512px; position: absolute; top: 306px; width: 27px; z-index: 1; " class="tinyText">
+              <div style="position: relative; width: 27px; ">
+                <img src="Smiling_Tigers_-_Home_files/shapeimage_15.png" alt="" style="height: 7px; left: 0px; margin-top: -3px; position: absolute; top: 0px; width: 27px; " />
+              </div>
             </div>
             <div style="height: 1549px; line-height: 1549px; " class="spacer"> </div>
           </div>
