Josh's roles update

--- a/Smiling_Tigers/Smiling_Tigers_-_Home.html
+++ b/Smiling_Tigers/Smiling_Tigers_-_Home.html
@@ -239,7 +239,7 @@ new Paste('widget0', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
             <div id="id8" style="height: 100px; left: 357px; position: absolute; top: 1449px; width: 147px; z-index: 1; " class="style_SkipStroke_3 shape-with-text">
               <div class="text-content graphic_textbox_layout_style_default_External_147_100" style="padding: 0px; ">
                 <div class="graphic_textbox_layout_style_default">
-                  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style">Josh: Producer/Rhythm Guitar</p>
+                  <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style">Josh: Producer/Rhythm Guitar and Drums (Understudy)</p>
                 </div>
               </div>
             </div>
